# digital_wallet

./: docker-compose.yml
transaction/: Dockerfile  pyproject.toml
transaction/app/: main.py
transaction/app/contrib/api_clients/: wallets.py
transaction/app/core/: api_connector.py  config.py
transaction/app/db/: base.py  mutations.py  selectors.py  session.py
transaction/app/models/: transactions.py  wallets.py
transaction/app/schemas/: __init__.py  trasactions.py
wallet/: Dockerfile  pyproject.toml
wallet/alembic/: env.py
wallet/alembic/versions/: 0db17341859a_default_tariff.py  1852409fd74a_insert_tariffs.py  2fb9ca7c5a27_initial.py  42b66ab83fba_transactions.py  5ce18721df7a_email_not_unique.py  8043b29e0397_country_id_nullable.py  812ab366a1ca_transfer_transaction_nullable.py  8a46cbf0cdfe_country_table.py  eff1fe540ba9_insert_countries.py  f68dcf7d5636_transfer_transaction.py
wallet/app/: exceptions.py  main.py
wallet/app/api/: deps.py
wallet/app/api/v1/: api.py
wallet/app/api/v1/endpoints/: auth.py  settings.py  users.py  wallets.py
wallet/app/contribs/: transaction_service.py
wallet/app/core/: config.py  security.py  utils.py
wallet/app/db/: base.py  mutations.py  selectors.py  session.py
wallet/app/models/: __init__.py  settings.py  users.py  wallets.py
wallet/app/schemas/: __init__.py  settings.py  users.py  wallets.py
