[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Медет <aselmysister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.2"
pydantic = "^1.8.1"
aio-pika = "^6.8.0"
aiohttp = "^3.7.4"
asyncpg = "^0.22.0"
uuid = "^1.30"
requests = "^2.25.1"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
